--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="favcon.ico" type="image/x-icon">
     <title>Redes Sociais</title>
 </head>
 <body>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="redes-sociais">
+
+        </section>
+    </main>
     
 </body>
 </html>
