--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         </section>
 
         <section id="redes-sociais">
-
+            <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="Github"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+            <a href="#" target="tela"> <img src="imagens/logo-facebook.jpg" alt="Facecook"></a><br>
         </section>
     </main>
     
